test_suite/ERROR_neg_int_lit.out
ERROR_neg_int_lit.java: 9:  Syntax Error: An expression can't start with: `-`
ERROR_neg_int_lit.java: 9:  Syntax Error: RHS expression of assignment to `a` is invalid;  skipping `-`, `IntegerLiteral 1`
A.test: 0
