test_suite/ERROR_neg_int_lit.java
// -unused -no-style -codegen
class Main {
    public static void main(String[] a) { }
}

class A {
    public int test() {
        int a;
        a = -1;
        return a;
    }
}
